# gsm-hat

./: .gitignore  CHANGELOG.md  LICENSE  README.md  README.old.md  pyproject.toml  setup.py
.github/workflows/: integration.yaml  pipeline.yaml
src/pywaveshare/boards/SIM868/: __init__.py
src/pywaveshare/boards/deprecated/: __init__.py
src/pywaveshare/boards/sim868/: __init__.py  client.py  config.py  exceptions.py  itc.py  protocols.py  typedefs.py  worker.py
tests/unit/: test_holder.py
