[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pywaveshare"
version = "0.5.0a3"
dependencies = ["pyserial", "RPi.GPIO"]
requires-python = ">=3.8"
authors = [{ name = "Tarek Tounsi", email = "software@tounsi.de" }]
maintainers = [
    { name = "Achilles Macunlay", email = "achilles.macunlay+github@gmail.com" },
]
description = "Waveshare GSM/GPRS/GNSS HAT (SIM868) controller for Raspberry Pi"
readme = "README.md"
license = { text = "MIT" }
keywords = [
    "GNSS",
    "GPS",
    "GSM",
    "Hat",
    "Pi",
    "Raspberry",
    "SIM868",
    "Waveshare",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]

[project.optional-dependencies]
dev = ["bandit", "coverage", "mypy", "pytest", "ruff"]
publish = ["build", "setuptools", "twine"]

[project.urls]
"Changelog" = "https://github.com/acmacunlay/pywaveshare/blob/main/CHANGELOG.md"
"Homepage" = "https://github.com/acmacunlay/pywaveshare"
"Old README" = "https://github.com/acmacunlay/pywaveshare/blob/main/README.old.md"
"Repository" = "https://github.com/acmacunlay/pywaveshare.git"

[[tool.mypy.overrides]]
module = ["RPi", "RPi.GPIO", "serial"]
ignore_missing_imports = true

[tool.bandit]
exclude_dirs = ["tests", ".venv"]
